--- a/www/index.html
+++ b/www/index.html
@@ -25,15 +25,19 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <meta name="msapplication-tap-highlight" content="no" />
-        <title>Hello World</title>
+        <title>Hello Pigeons</title>
     </head>
     <body>
         <div class="app">
-            <h1>Apache Cordova</h1>
+           <nav>
+		    <ul>
+			<li><h1><a href="pages/overview.html">Messages from Pigeons</a></h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
-            </div>
+            </ul>
+			</div>
+		</nav>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
