--- a/www/pages/overview.html
+++ b/www/pages/overview.html
@@ -9,29 +9,30 @@
         <title>Overview</title>
     </head>
     <body>
-        <div class="overview">
+        <div id="overview">
             <h2>Overview</h2>
         </div>
 		<ul>
-		<li>	
-    <div class="button">
-        <h3>My Pigeons</h3><br>
+<li>	
+    <div id="button">
+        <h3>My Pigeons</h3>
     </div>
-    <div class="button">
+    <div id="button">
         <h3>My Messages</h3>
     </div>
-    <div class="button">
+    <div id="button">
         <h3>Map</h3>
     </div>
-    <div class="button">
+    <div id="button">
         <h3>Intercept</h3>
     </div>
-    <div class="button">
-        <h2>Profile</h3>
+    <div id="button">
+        <h3>Profile</h3>
     </div>
-    <div class="button">
-        <h2>Settings</h3>
+    <div id="button">
+        <h3>Settings</h3>
     </div>
+</li>
 </ul>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
