--- a/www/pages/mypigeon.html
+++ b/www/pages/mypigeon.html
@@ -9,31 +9,21 @@
         <title>Overview</title>
     </head>
     <body>
-        <div id="overview">
-            <h2>Overview</h2>
+	          <div id="overview">
+	              <h2>Overview</h2>
+	          </div>
+	  		<ul>
+	  		<li>	
+	      <div id="button">
+	          <h3><a href="overview.html">Go back</h3>
+	      </div>
+	  </li>
+	  </ul>
+			
         </div>
-		<ul>
-		<li>	
-    <div id="button">
-        <h3><a href="mypigeon.html">My Pigeons</h3>
-    </div>
-    <div id="button">
-        <h3>My Messages</h3>
-    </div>
-    <div id="button">
-        <h3>Map</h3>
-    </div>
-    <div id="button">
-        <h3>Intercept</h3>
-    </div>
-    <div id="button">
-        <h3>Profile</h3>
-    </div>
-    <div id="button">
-        <h3>Settings</h3>
-    </div>
-</li>
-</ul>
+		<div id="mypigeon">
+			<img src="../img/postduiven.jpg">
+		</div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
