--- a/www/pages/mypigeon.html
+++ b/www/pages/mypigeon.html
@@ -10,7 +10,7 @@
     </head>
     <body>
 	          <div id="overview">
-	              <h2>Overview</h2>
+	              <h2>My pigeons</h2>
 	          </div>
 	  		<ul>
 	  		<li>	
@@ -19,10 +19,8 @@
 	      </div>
 	  </li>
 	  </ul>
-			
-        </div>
-		<div id="mypigeon">
-			<img src="../img/postduiven.jpg">
+		<div>
+			<img src="../img/postduiven.png" height="400px" width="1491px">
 		</div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
