--- a/www/pages/mypigeon.html
+++ b/www/pages/mypigeon.html
@@ -15,7 +15,7 @@
 	  		<ul>
 	  		<li>	
 	      <div id="button">
-	          <h3><a href="overview.html">Go back</h3>
+	          <h3><a href="overview.html">Go back</a></h3>
 	      </div>
 	  </li>
 	  </ul>
