--- a/www/pages/map.html
+++ b/www/pages/map.html
@@ -9,31 +9,19 @@
         <title>Overview</title>
     </head>
     <body>
-        <div id="overview">
-            <h2>Overview</h2>
-        </div>
-		<ul>
-		<li>	
-    <div id="button">
-        <h3><a href="mypigeon.html">My Pigeons</a></h3>
-    </div>
-    <div id="button">
-        <h3>My Messages</h3>
-    </div>
-    <div id="button">
-         <h3><a href="map.html">Map</a></h3>
-    </div>
-    <div id="button">
-        <h3>Intercept</h3>
-    </div>
-    <div id="button">
-        <h3>Profile</h3>
-    </div>
-    <div id="button">
-        <h3>Settings</h3>
-    </div>
-</li>
-</ul>
+	          <div id="overview">
+	              <h2>Map</h2>
+	          </div>
+	  		<ul>
+	  		<li>	
+	      <div id="button">
+	          <h3><a href="overview.html">Go back</a></h3>
+	      </div>
+	  </li>
+	  </ul>
+		<div>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d78478.195017468!2d4.30986835!3d52.07165425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1snl!2snl!4v1414959855234" width="640" height="930" frameborder="0" style="border:0"></iframe>
+		</div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
