--- a/www/index.html
+++ b/www/index.html
@@ -1,22 +1,3 @@
-<!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
     <head>
         <meta charset="utf-8" />
@@ -25,18 +6,37 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <meta name="msapplication-tap-highlight" content="no" />
-        <title>Hello Pigeons</title>
+        <title>Overview</title>
     </head>
     <body>
-        <div class="app">
-           <nav>
-		    <ul>
-			<li><h1><a href="pages/overview.html">Messages from Pigeons</a></h1>
+		<div class="view active" id="start-view">
+	        <div class="header">
+	            <h1>Pigeon</h1>
+				<h2>Indirect Messenger<h2>
+	        </div>
+		
+			<div id="buy_start">
+				<h3 id="buy-pigeon">Buy Pigeon</h3>
+			</div>
+		</div>
+		<div class="view" id="my-pigeon-view">
+          <div class="header">
+			  <h1>Marktplace</h1>
+          </div>
+	  		<div>
+	  			<img src="img/postduivenBRBR.png" height="400px" width="1491px">
+	  		</div>
+		</div>
+		<ul>
+			<li>Nav 1</li>
+			<li>Nav 2</li>
+		</ul>
 
         <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             initialize();
-        </script>		
+        </script>
     </body>
 </html>
