--- a/www/pages/map.html
+++ b/www/pages/map.html
@@ -20,7 +20,7 @@
 	  </li>
 	  </ul>
 		<div>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d78478.195017468!2d4.30986835!3d52.07165425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1snl!2snl!4v1414959855234" width="640" height="930" frameborder="0" style="border:0"></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d78478.195017468!2d4.30986835!3d52.07165425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1snl!2snl!4v1414959855234" width="640" height="930" frameborder="0" style="border:0" class="map"></iframe>
 		</div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
