--- a/www/index.html
+++ b/www/index.html
@@ -27,9 +27,12 @@
 	  			<img src="img/postduivenBRBR.png" height="400px" width="1491px">
 	  		</div>
 		</div>
-		<ul>
-			<li>Nav 1</li>
-			<li>Nav 2</li>
+		
+		<ul class="main_nav">
+			<div class="nav" id="martkplace"><li>Marktplace</li></div>
+			<div class="nav" id="map"><li>Map</li></div>
+			<div class="nav" id="messages"><li>Messages</li></div>
+			<div class="nav" id="settings"><li>Settings</li></div>
 		</ul>
 
         <script type="text/javascript" src="cordova.js"></script>
