--- a/www/splash/index.html
+++ b/www/splash/index.html
@@ -30,7 +30,7 @@
     <body>
         <div class="app">
            <nav>
-		    <h1><a href="pages/start.html">PIGEON</a></h1>
+		    <h1><a href="../index.html">PIGEON</a></h1>
 				<h2>Indirect Messenger</h2>
 
         <script type="text/javascript" src="cordova.js"></script>
